--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -4,7 +4,6 @@ header {
 	width: 100%;
 	background-image: url(../images/logo.png);
 	background-repeat: no-repeat;
-	background-position: left center;
-	padding-left: 20px;
+	background-position-x: 20px;
 	border-bottom: 1px solid #CCCCCC;
 }
